# neuzzplusplus

./: .flake8  .gitignore  .pre-commit-config.yaml  3rd-party-licenses.txt  NOTICE.md  README.md  pyproject.toml
aflpp-plugins/: Makefile  custom_mutator_helpers.h  ml-mutator.c
docs/: conf.py  index.rst
docs/modules/: data_loaders.rst  models.rst  mutations.rst  preprocess.rst  utils.rst
neuzzpp/: data_loaders.py  models.py  mutations.py  preprocess.py  utils.py
notebooks/: analysis_ml_oracle_coverage.ipynb
scripts/: train_cov_oracle.py
